[gd_scene load_steps=5 format=2]

[ext_resource path="res://NewPopup.gd" type="Script" id=1]
[ext_resource path="res://DraggablePopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/icon_ok.png" type="Texture" id=3]
[ext_resource path="res://Assets/icon_cancel.png" type="Texture" id=4]

[node name="NewPopup" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggablePopup" parent="." instance=ExtResource( 2 )]
visible = true
margin_right = 253.0
margin_bottom = 203.0

[node name="GridContainer" type="GridContainer" parent="DraggablePopup"]
anchor_top = -0.00122811
anchor_right = 1.0
anchor_bottom = 0.998772
margin_left = 20.0
margin_top = 30.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="DraggablePopup/GridContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Title"

[node name="TitleTextEdit" type="LineEdit" parent="DraggablePopup/GridContainer"]
margin_left = 52.0
margin_right = 213.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 20 )
text = "untitled"

[node name="HSeparator" type="HSeparator" parent="DraggablePopup/GridContainer"]
margin_top = 28.0
margin_right = 42.0
margin_bottom = 32.0

[node name="HSeparator2" type="HSeparator" parent="DraggablePopup/GridContainer"]
margin_left = 52.0
margin_top = 28.0
margin_right = 213.0
margin_bottom = 32.0

[node name="WidthLabel" type="Label" parent="DraggablePopup/GridContainer"]
margin_top = 41.0
margin_right = 42.0
margin_bottom = 55.0
text = "Width"

[node name="WidthTextEdit" type="LineEdit" parent="DraggablePopup/GridContainer"]
margin_left = 52.0
margin_top = 36.0
margin_right = 213.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 20 )
text = "32"
align = 1

[node name="HeightLabel" type="Label" parent="DraggablePopup/GridContainer"]
margin_top = 69.0
margin_right = 42.0
margin_bottom = 83.0
text = "Height"

[node name="HeightTextEdit" type="LineEdit" parent="DraggablePopup/GridContainer"]
margin_left = 52.0
margin_top = 64.0
margin_right = 213.0
margin_bottom = 88.0
rect_min_size = Vector2( 150, 20 )
text = "32"
align = 1

[node name="PresetLabel" type="Label" parent="DraggablePopup/GridContainer"]
margin_top = 95.0
margin_right = 42.0
margin_bottom = 109.0
text = "	"

[node name="PresetButtons" type="HBoxContainer" parent="DraggablePopup/GridContainer"]
margin_left = 52.0
margin_top = 92.0
margin_right = 213.0
margin_bottom = 112.0

[node name="16x16Button" type="Button" parent="DraggablePopup/GridContainer/PresetButtons"]
margin_right = 51.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
text = "16x16"
expand_icon = true

[node name="32x32Button" type="Button" parent="DraggablePopup/GridContainer/PresetButtons"]
margin_left = 55.0
margin_right = 106.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
text = "32x32"

[node name="64x64Button" type="Button" parent="DraggablePopup/GridContainer/PresetButtons"]
margin_left = 110.0
margin_right = 161.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
text = "64x64"

[node name="HSeparator3" type="HSeparator" parent="DraggablePopup/GridContainer"]
margin_top = 116.0
margin_right = 42.0
margin_bottom = 120.0

[node name="HSeparator4" type="HSeparator" parent="DraggablePopup/GridContainer"]
margin_left = 52.0
margin_top = 116.0
margin_right = 213.0
margin_bottom = 120.0

[node name="OkButton" type="TextureButton" parent="DraggablePopup"]
margin_left = 145.083
margin_top = 152.218
margin_right = 185.083
margin_bottom = 192.218
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="TextureButton" parent="DraggablePopup"]
margin_left = 190.868
margin_top = 151.029
margin_right = 230.868
margin_bottom = 191.029
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DraggablePopup/GridContainer/PresetButtons/16x16Button" to="." method="_on_16x16Button_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/PresetButtons/32x32Button" to="." method="_on_32x32Button_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/PresetButtons/64x64Button" to="." method="_on_64x64Button_pressed"]
[connection signal="pressed" from="DraggablePopup/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="DraggablePopup/CancelButton" to="." method="_on_CancelButton_pressed"]
